router/etc/iptables/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Sun May 31 00:35:49 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens37 -o ens33 -j ACCEPT
-A FORWARD -i ens38 -o ens33 -j ACCEPT
-A FORWARD -i ens39 -o ens33 -j ACCEPT
-A FORWARD -i ens40 -o ens33 -j ACCEPT
-A FORWARD -i ens40 -o ens37 -j ACCEPT
-A FORWARD -i ens40 -o ens38 -j ACCEPT
-A FORWARD -i ens40 -o ens39 -j ACCEPT
-A FORWARD -i ens38 -o ens37 -j ACCEPT
-A FORWARD -i ens38 -o ens39 -j ACCEPT
-A FORWARD -s 192.168.4.0/24 -d 192.168.2.0/24 -i ens39 -o ens37 -j ACCEPT
-A FORWARD -s 192.168.2.0/24 -d 192.168.4.0/24 -i ens37 -o ens39 -j ACCEPT
-A FORWARD -d 192.168.4.10/32 -i ens33 -o ens39 -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Sun May 31 00:35:49 2026
# Generated by iptables-save v1.8.9 (nf_tables) on Sun May 31 00:35:49 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i ens33 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.4.10:80
-A POSTROUTING -o ens33 -j MASQUERADE
COMMIT
# Completed on Sun May 31 00:35:49 2026
